<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main activity Strings -->
    <string name="app_name">HearForMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
        mollit anim id est laborum.</string>
    
    <string name="title_activity_main">main</string>
    <!-- End of Main activity Strings -->


    <!--Settings strings -->
    <string name="title_activity_settings">Settings</string>
    <string name="lights_summary">On to watch it as it is, off to watch it on high contrast.</string>
    <string name="settings_title_light">Lights</string>
    <string name="settings_textsize_dialog">Text Size</string>
    <string name="positive">OK</string>
    <string name="negative">Cancel</string>
    <string name="settings_options">Options</string>
    <string name="settings_language">Languages</string>
    <!-- End of Settings strings -->

    <!-- Languages Strings -->
    <string name="input_language">Input language</string>
    <string name="output_language">Output language</string>
    <string name="output_language_not_available">The input language you selected can\'t be translated</string>

    <string name="none">Don\'t translate</string>
    <string name="araEGY">Arabic (Egypt)</string>
    <string name="araSAU">Arabic (Saudi Arabia)</string>
    <string name="araXWW">Arabic (International)</string>
    <string name="indIDN">Bahasa (Indonesia)</string>
    <string name="yueCHN">Cantonese (Simplified)</string>
    <string name="catESP">Catalan</string>
    <string name="hrvHRV">Croatian </string>
    <string name="cesCZE">Czech</string>
    <string name="danDNK">Danish</string>
    <string name="nldNLD">Dutch</string>
    <string name="engAUS">English (Australia)</string>
    <string name="engGBR">English (GB)</string>
    <string name="engUSA">English (US)</string>
    <string name="engIND">English (India)</string>
    <string name="finFIN">Finnish</string>
    <string name="fraCAN">French (Canada)</string>
    <string name="fraFRA">French (France)</string>
    <string name="deuDEU">German</string>
    <string name="ellGRC">Greek</string>
    <string name="hebISR">Hebrew</string>
    <string name="hinIND">Hindi</string>
    <string name="hunHUN">Hungarian</string>
    <string name="itaITA">Italian</string>
    <string name="jpnJPN">Japanese</string>
    <string name="korKOR">Korean</string>
    <string name="zlmMYS">Malay</string>
    <string name="cmnCHN">Mandarin (Simplified)</string>
    <string name="cmnTWN">Mandarin (Traditional)</string>
    <string name="norNOR">Norwegian</string>
    <string name="polPOL">Polish</string>
    <string name="porBRA">Portuguese (Brazil)</string>
    <string name="porPRT">Portuguese (Portugal)</string>
    <string name="ronROU">Romanian</string>
    <string name="rusRUS">Russian</string>
    <string name="slkSVK">Slovak</string>
    <string name="spaESP">Spanish (Spain)</string>
    <string name="spaXLA">Spanish (LatAm)</string>
    <string name="sweSWE">Swedish</string>
    <string name="thaTHA">Thai</string>
    <string name="turTUR">Turkish</string>
    <string name="ukrUKR">Ukrainian</string>
    <string name="vieVNM">Vietnamese</string>
    <!-- End of Languages Strings -->


</resources>
