<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_options">

        <SwitchPreference
            android:id="@+id/settings_switch"
            android:key="switch_preference"
            android:title="@string/settings_title_light"
            android:summary="@string/lights_summary"
            android:defaultValue="true"
            android:persistent="true"
            />

        <com.android.tomas.hearforme.CustomDialogPreference
            android:key="dialog_preference"
            android:title="@string/settings_textsize_dialog"
            android:dialogTitle="@string/settings_textsize_dialog"
            android:negativeButtonText="@string/negative"
            android:positiveButtonText="@string/positive"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_language">
        <ListPreference
            android:title="@string/input_language"
            android:key="input_language_preference"
            android:entries="@array/input_languages_names"
            android:entryValues="@array/input_languages_codes"
          />

        <ListPreference
            android:title="@string/output_language"
            android:key="output_language_preference"
            android:entries="@array/input_languages_names"
            android:entryValues="@array/input_languages_codes"
            />

        </PreferenceCategory>



</PreferenceScreen>
